--- a/styles.css
+++ b/styles.css
@@ -81,12 +81,12 @@
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    font-size: 2rem;
+    font-size: 1.5rem;
     background-color: #ffffff;      
     border: 2px solid #a67c52;      
     border-radius: 50%;            
     width: 40px;
-    height: 40px;
+    aspect-ratio: 1 / 1;
     display: flex;
     justify-content: center;
     align-items: center;
